--- a/dev/templates/profile.pug
+++ b/dev/templates/profile.pug
@@ -9,10 +9,7 @@ block content
 			section.profile-content
 				h1.title Add Member
 				.block.profile-block
-					p.text
-						| Protect the people you care about most. Parents, siblings, or chosen family.
-						br
-						| You can add up to 10 adults and unlimited kids. Add a new member below.
+					p.text Protect the people you care about most. Parents, siblings, or chosen family. You can add up to 10 adults and unlimited kids. Add a new member below.
 					.profile-block-row
 						label.inpt
 							input(type='text' placeholder='First Name')
