--- a/dev/templates/template/aside-profile.pug
+++ b/dev/templates/template/aside-profile.pug
@@ -3,7 +3,7 @@ aside.profile-aside
 		a(href='/profile.html').profile-aside-item
 			svg
 				use(xlink:href='/img/sprite.svg#add')
-			span Add Memeber
+			span Add Member
 		a(href='/details.html').profile-aside-item.active
 			svg
 				use(xlink:href='/img/sprite.svg#person')
