--- a/dev/templates/details.pug
+++ b/dev/templates/details.pug
@@ -7,10 +7,10 @@ block content
 		include template/aside-profile
 		main.details
 			section.profile-content
-				h1.title Account Details
+				h1.title.details-title Account Details
 				.profile-table-details
 					h2.block-title Personal
-					.table-cont.profile-table.details-table
+					.table-cont.details-table
 						table.table
 							tbody
 								tr
