--- a/dev/templates/profile.pug
+++ b/dev/templates/profile.pug
@@ -34,6 +34,7 @@ block content
 							tbody
 								tr
 									td John
+										span.profile-table-surname &nbsp;Doe
 									td Doe
 									td john@aol.com
 									td.table-actions
@@ -42,6 +43,7 @@ block content
 												use(xlink:href='/img/sprite.svg#cancel')
 								tr
 									td John
+										span.profile-table-surname &nbsp;Doe
 									td Doe
 									td john@aol.com
 									td.table-actions
@@ -50,6 +52,7 @@ block content
 												use(xlink:href='/img/sprite.svg#cancel')
 								tr
 									td John
+										span.profile-table-surname &nbsp;Doe
 									td Doe
 									td john@aol.com
 									td.table-actions
