fix profile and details pages

--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -234,6 +234,9 @@ body
 			&-button .btn
 				w 100%
 				justify-content center
+.head,.foot
+	position relative
+	z-index 1000
 .-bg
 	background-image url('../img/login-mobile.jpg')
 	background-size cover
