--- a/dev/templates/footer-profile.pug
+++ b/dev/templates/footer-profile.pug
@@ -85,6 +85,10 @@ footer.foot
 						.inpt.-full
 							span.inpt-placeholder Billing street address
 							input(type='text')
+					.change-row
+						.inpt.-full
+							span.inpt-placeholder Billing street address (Line 2)
+							input(type='text')
 					.row.change-row
 						.inpt
 							span.inpt-placeholder State
