--- a/dev/templates/notifications.pug
+++ b/dev/templates/notifications.pug
@@ -7,13 +7,10 @@ block content
 		include template/aside-profile
 		main.notifications
 			section.profile-content
-				h1.title Notifications
+				h1.title.notifications-title Notifications
 				.profile-table-details
 					h2.block-title Preferences
-					p.text.profile-notify-text
-						| Select how you would like to receive important alerts
-						br
-						| related to your account.
+					p.text.profile-notify-text Select how you would like to receive important alerts related to your account.
 					.profile-notify
 						.profile-notify-row
 							.profile-notify-title
