--- a/dev/templates/benefits.pug
+++ b/dev/templates/benefits.pug
@@ -44,23 +44,11 @@ block content
 							| please call the customer service number located in your membership materials or at 1-800-854-6147.
 						h3.block-title Limit of Insurance
 						ul.profile-benefits-content-list
-							li
-								strong Aggregate Limit of Insurance:
-								span  $25,000 or $1,000,000 per policy period
-							li
-								strong Lost Wages:
-								span $1,500 per week, for 5 weeks maximum
-							li
-								strong Initial Legal Consultation:
-								span $2,000 per policy period
-							li
-								strong Travel Expenses:
-								span $2,000 per policy period
-							li
-								strong Elder Care and Child Care:
-								span - $1,000 per policy period
-							li
-								strong Deductible:
-								span $0 per policy period (depending on your service plan level)
+							li #[strong Aggregate Limit of Insurance:] #[span  $25,000 or $1,000,000 per policy period]
+							li #[strong Lost Wages:] #[span $1,500 per week, for 5 weeks maximum]
+							li #[strong Initial Legal Consultation:] #[span $2,000 per policy period]
+							li #[strong Travel Expenses:] #[span $2,000 per policy period]
+							li #[strong Elder Care and Child Care:] #[span - $1,000 per policy period]
+							li #[strong Deductible:] #[span $0 per policy period (depending on your service plan level)]
 						h3.block-title Filing a Claim
 	include footer-profile
