--- a/dev/templates/vault.pug
+++ b/dev/templates/vault.pug
@@ -15,9 +15,9 @@ block content
 				.vault-row.row
 					.vault-left
 						nav.vault-tabs
-							button.vault-tab.-active
-								| Personal
 							button.vault-tab
+								| Personal
+							button.vault-tab.-active
 								| Financial
 							button.vault-tab
 								| Auto
@@ -111,12 +111,7 @@ block content
 							img(src='/img/vault.svg')
 						h4.subtitle.-little
 							| Your own digital lockbox
-						p.text.vault-text
-							| Safeguard important information and files in your vault, an essential
-							br
-							| tool for protecting your identity. Documents stored here will be
-							br
-							| encrypted, but not all of them are not monitored on the dark web.
+						p.text.vault-text Safeguard important information and files in your vault, an essential tool for protecting your identity. Documents stored here will be encrypted, but not all of them are not monitored on the dark web.
 						.vault-ensure
 							.vault-ensure_img
 								img(src='/img/ensure.svg')
