--- a/dev/templates/vault-auto.pug
+++ b/dev/templates/vault-auto.pug
@@ -59,33 +59,26 @@ block content
 											svg
 												use(xlink:href='/img/sprite.svg#add')
 											span Add vehicle information
-							button.btn.-plus.link(data-click="front:showHalf" data-popup='#license')
-								svg
-									use(xlink:href='/img/sprite.svg#add')
-								span Add new vehicle
+								button.btn.-plus.link(data-click="front:showHalf" data-popup='#license')
+									svg
+										use(xlink:href='/img/sprite.svg#add')
+									span Add new vehicle
 					.vault-right
 						h3.subtitle What is the Identimaxx vault?
 						.vault-img
 							img(src='/img/vault.svg')
 						h4.subtitle.-little
 							| Your own digital lockbox
-						p.text.vault-text
-							| Safeguard important information and files in your vault, an essential
-							br
-							| tool for protecting your identity. Documents stored here will be
-							br
-							| encrypted, but not all of them are not monitored on the dark web.
+						p.text.vault-text Safeguard important information and files in your vault, an essential tool for protecting your identity. Documents stored here will be encrypted, but not all of them are not monitored on the dark web.
 						.vault-ensure
 							.vault-ensure_img
 								img(src='/img/ensure.svg')
 							.vault-ensure_content
-								h5.vault-ensure_title Ensure your safety with Identimaxx’s vault service.
-								p.vault-ensure_text
-									| The vault serves as your digital lockbox, safeguarding
-									| your data and sensitive files with our top-tier encryption.
+								strong.vault-ensure_title Ensure your safety with Identimaxx’s vault service.
+								span.vault-ensure_text The vault serves as your digital lockbox, safeguarding your data and sensitive files with our top-tier encryption.
 
 		script(src='/front.js' type='module')
-	.popup-half.-opened.-whiteshadow#license
+	.popup-half.-whiteshadow#license
 		.popup-half-left
 		.popup-half-right
 				button.popup-close(data-click="front:closeHalf" data-popup='#license')
