--- a/dev/templates/vault-other.pug
+++ b/dev/templates/vault-other.pug
@@ -61,20 +61,13 @@ block content
 							img(src='/img/vault.svg')
 						h4.subtitle.-little
 							| Your own digital lockbox
-						p.text.vault-text
-							| Safeguard important information and files in your vault, an essential
-							br
-							| tool for protecting your identity. Documents stored here will be
-							br
-							| encrypted, but not all of them are not monitored on the dark web.
+						p.text.vault-text Safeguard important information and files in your vault, an essential tool for protecting your identity. Documents stored here will be encrypted, but not all of them are not monitored on the dark web.
 						.vault-ensure
 							.vault-ensure_img
 								img(src='/img/ensure.svg')
 							.vault-ensure_content
-								h5.vault-ensure_title Ensure your safety with Identimaxx’s vault service.
-								p.vault-ensure_text
-									| The vault serves as your digital lockbox, safeguarding
-									| your data and sensitive files with our top-tier encryption.
+								strong.vault-ensure_title Ensure your safety with Identimaxx’s vault service.
+								span.vault-ensure_text The vault serves as your digital lockbox, safeguarding your data and sensitive files with our top-tier encryption.
 
 		script(src='/front.js' type='module')
 	.popup#popup
