--- a/dev/templates/vault-vehicle.pug
+++ b/dev/templates/vault-vehicle.pug
@@ -59,13 +59,13 @@ block content
 											svg
 												use(xlink:href='/img/sprite.svg#add')
 											span Add vehicle information
-							button.btn.-plus.link(data-click="front:showHalf" data-popup='#license')
-								svg
-									use(xlink:href='/img/sprite.svg#add')
-								span Add new vehicle
+								button.btn.-plus.link(data-click="front:showHalf" data-popup='#license')
+									svg
+										use(xlink:href='/img/sprite.svg#add')
+									span Add new vehicle
 					.vault-right
 		script(src='/front.js' type='module')
-	.popup-half.-opened.-whiteshadow#license
+	.popup-half.-whiteshadow#license
 		.popup-half-left
 		.popup-half-right
 			button.popup-close(data-click="front:closeHalf" data-popup='#license')
