fix support page

--- a/dev/templates/support.pug
+++ b/dev/templates/support.pug
@@ -1,7 +1,7 @@
 extends template/main
 append vars
 	-
-		page_title = 'My Vault'
+		page_title = 'Support'
 block content
 	main
 		section.vault
@@ -16,13 +16,12 @@ block content
 					.vault-left.support-left
 						p.text
 							| If you need assistance, feel free to contact us via phone or email. We're here to help with any questions or concerns you may have.
-						ul.list
-							li.list-item
-								span Call us:&nbsp;
-								strong  855-200-6788
-							li.list-item
-								span Email us: 
-								strong  support@identimaxx.com
+						p.text.support-text
+							span Call us:&nbsp;
+							a(href="tel:8552006788") 855-200-6788
+							br
+							span Email us:
+							a(href="mailto:support@identimaxx.com") support@identimaxx.com
 						p.text
 							| American Identity Group
 							br
@@ -31,7 +30,7 @@ block content
 							| Suite B4 
 							br
 							| South Amboy, NJ 08879
-					.vault-right
+					.vault-right.support-right
 						form.support-form.change-form
 							h5.subtitle How can we help?
 							.change-row
