--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -1486,6 +1486,10 @@ body
 	&-left
 		+desktop()
 			max-width 338px
+	&-right
+		margin-top 40px
+		+desktop()
+			padding-left 122px
 	&-form
 		position: relative
 		margin-top: 0
@@ -1493,11 +1497,18 @@ body
 		background-color: #fff
 		padding: 40px 20px
 		border: 2px solid RGBA($plight_blue, 0.2)
-		box-shadow: 0px 4px 16px RGBA($plight_blue, 0.16)
+		box-shadow: 0 4px 16px RGBA($plight_blue, 0.16)
 		border-radius: 8px
 		+desktop()
 			w 583px
 			padding 40px
+	&-text
+		margin 24px 0
+		padding 24px 0
+		border-top 1px solid RGBA($plight_blue,.2)
+		border-bottom 1px solid RGBA($plight_blue,.2)
+		a
+			color RGB($pdark_blue)
 .report
 	&.popup-half
 		top -2px
