--- a/dev/templates/lost.pug
+++ b/dev/templates/lost.pug
@@ -12,7 +12,7 @@ block content
 					a(href='#').breads-item Lost Wallet Service
 				.vault-row.row
 					.vault-left.lost-left
-						h5.white-block_title.vault-title
+						h5.white-block_title.vault-title.lost-title
 							span Lost Wallet Service
 						p.text
 							| If your wallet or purse is lost or stolen, instead of spending time searching for information to cancel your cards, the Identimaxx Lost Wallet Service will quickly guide you through the process.
