--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -1609,6 +1609,8 @@ body
 		&_text
 			padding-left: 19px
 			color RGB($pdark_gray)
+			.link.-blue
+				text-decoration none
 		&_img
 			max-width 48px
 	.btn
